# pymovements

./: .codecov.yml  .gitignore  .license_header.txt  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  coverage-py313.xml  pylintrc  pyproject.toml  tox.ini
.github/: release-drafter.yml
.github/workflows/: autolabeler.yml  benchmark.yml  build.yml  datasets.yml  publish.yml  tests.yml  welcome.yml
docs/: __init__.py
docs/source/: bibliography.bib  bibliography.rst  citing.rst  conf.py  getting-started.rst  index.rst
docs/source/_templates/: dataset.rst
docs/source/about-us/: acknowledgments.rst  citing.rst  funding.rst  index.rst
docs/source/contributing/: code-of-conduct.rst  contributing-code.rst  contributing-datasets.ipynb  contributing-documentation.rst  index.rst  maintainer-guidelines.rst  my_dataset.yaml  reporting-bugs.rst
docs/source/datasets/: GGTG.rst  MCFW-Gaze.rst  MECOL1W2.rst  PotsdamBingePVT.rst  RaCCooNS.rst  datasets.yaml  example_datasets.csv  index.rst  mcfw_gaze.rst  public_datasets.csv
docs/source/examples/: gaze-potec-example.csv  gaze-potec.tsv  gaze-toy-example.csv  gaze-with-loss.csv
docs/source/reference/: dataset.rst  events.rst  gaze.rst  index.rst  measures.rst  plotting.rst  stimulus.rst  transforms.rst  utils.rst
docs/source/tutorials/: R-tutorial.md  adding-public-dataset.ipynb  blink-cleaning.ipynb  blink-detection.ipynb  creating-synthetic-data.ipynb  data-quality-report.ipynb  event-handling.ipynb  heatmap.ipynb  index.rst  local-dataset.ipynb  parsing-dataset.ipynb  plot-main-sequence.ipynb  plotting.ipynb  preprocessing-raw-data.ipynb  public-datasets.ipynb  pymovements-in-10-minutes.ipynb  saving-loading-preprocessed.ipynb  scanpathplot.ipynb
docs/source/user-guide/: data-quality.ipynb  data-quality.rst  event-detection.ipynb  event-detection.rst  experiment.ipynb  index.rst  inspect-raw-samples.ipynb  inspect-raw-samples.rst  installation.rst  loading-gaze-data.ipynb  understanding-data.rst  work-with-datasets.rst
src/pymovements/: __init__.py  _version.py  exceptions.py  warnings.py
src/pymovements/_scripts/: write_dataset_docpages.py  write_datasets_yaml.py
src/pymovements/_utils/: _checks.py  _deprecated.py  _html.py  _paths.py  _strings.py
src/pymovements/dataset/: __init__.py  _bids_dataset.py  data_quality.py  dataset.py  dataset_definition.py  dataset_download.py  dataset_files.py  dataset_library.py  dataset_paths.py  participants.py  phenotype.py  resources.py  websource.py
src/pymovements/datasets/: __init__.py  bsc.py  bsc.yaml  bsc2.py  bsc2.yaml  chinese_reading.py  chinese_reading.yaml  codecomprehension.py  codecomprehension.yaml  colagaze.py  colagaze.yaml  copco.py  copco.yaml  daemons.py  daemons.yaml  datasets.yaml  didec.py  didec.yaml  emtec.py  emtec.yaml  etdd70.py  etdd70.yaml  fakenews.py  fakenews.yaml  gaze4hate.py  gaze4hate.yaml  gaze_graph.py  gaze_graph.yaml  gaze_on_faces.py  gaze_on_faces.yaml  gazebase.py  gazebase.yaml  gazebasevr.py  gazebasevr.yaml  ggtg.py  ggtg.yaml  hbn.py  hbn.yaml  iitb_hgc.py  iitb_hgc.yaml  (+41 more)
src/pymovements/events/: __init__.py  events.py  frame.py  precomputed.py  processing.py  properties.py  segmentation.py
src/pymovements/gaze/: __init__.py  experiment.py  eyetracker.py  gaze.py  gaze_dataframe.py  integration.py  io.py  quality.py  screen.py  transforms.py  transforms_numpy.py  validation.py
src/pymovements/measure/: __init__.py  event_processing.py  event_properties.py  library.py  measures.py  sample_measures.py
src/pymovements/plotting/: __init__.py  _matplotlib.py  data_loss_histogram.py  heatmap.py  main_sequence_plot.py  scanpathplot.py  traceplot.py  tsplot.py
src/pymovements/reading_measures/: __init__.py
src/pymovements/stimulus/: __init__.py  image.py  text.py
src/pymovements/synthetic/: __init__.py  step_function.py
src/pymovements/transforms/: __init__.py  _utils.py  center_origin.py  clip.py  deg2pix.py  downsample.py  library.py  norm.py  numpy.py  pix2deg.py  pos2acc.py  pos2vel.py  resample.py  savitzky_golay.py  segmentation.py  smooth.py  value_impossible.py
src/pymovements/utils/: __init__.py  aois.py  archives.py  downloads.py  filters.py  parsing.py  paths.py  plotting.py  strings.py
tests/: __init__.py  conftest.py
tests/benchmark/: import_test.py
tests/files/: raccoons.asc  toy_text_1_1_aoi.csv
tests/files/stimuli/: toy_text_aoi_rtl.csv  toy_text_aoi_vertical_ltr.csv  toy_text_aoi_vertical_rtl.csv
tests/fixtures/: deprecation_fixtures.py  deprecation_fixtures_test.py  file_fixtures.py  file_fixtures_test.py  gaze_fixtures.py  plotting_fixtures.py  text_stimulus_fixtures.py  text_stimulus_fixtures_test.py
tests/functional/: dataset_processing_test.py  gaze_file_processing_test.py
tests/integration/: download_dataset_test.py  public_dataset_processing_test.py
tests/unit/_scripts/: write_dataset_docpages_test.py  write_datasets_yaml_test.py
tests/unit/_utils/: _checks_test.py  _html_test.py  _paths_test.py  _strings_test.py
tests/unit/dataset/: bids_dataset_test.py  data_quality_test.py  dataset_definition_test.py  dataset_download_test.py  dataset_files_test.py  dataset_library_test.py  dataset_participants_test.py  dataset_paths_test.py  dataset_test.py  participants_test.py  phenotype_test.py  resources_test.py  test_data_quality.py  websource_test.py
tests/unit/datasets/: datasets_test.py
tests/unit/events/: Working Copy of events_test.py  event_aoi_mapping_test.py  events_test.py  frame_test.py  map_to_aois_behaviour_test.py  map_to_aois_ignore_nonfix_test.py  processing_test.py  properties_test.py  segmentation_test.py
tests/unit/fixtures/: text_stimulus_fixtures_test.py
tests/unit/gaze/: apply_test.py  detect_test.py  detect_warning_test.py  experiment_test.py  eyetracker_test.py  gaze_aoi_mapping_test.py  gaze_dataframe_test.py  gaze_eye_selection_test.py  gaze_init_test.py  gaze_messages_test.py  gaze_save_test.py  (+13 more)
testsIHMM/: gaze-toy-example.csv  ihmmTest.ipynb  testing.py  testingCorrectness.ipynb
(+181 files in other folders)
