[build-system]
requires = [
  "setuptools>=61.0.0",
  "wheel",
  "setuptools-git-versioning>=3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymovements"
description = "A python package for processing eye movement data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
maintainers = [
  {name = "Daniel Krakowczyk", email = "daniel.krakowczyk@uni-potsdam.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = [
  "deprecated>=1.2.18",
  "fastexcel>=0.13.0",
  "matplotlib>=3.8.0",
  "numpy>=1.22.4",
  "pandas>=2.1.4",
  "polars>=1.35.1",
  "pyarrow>=11.0.0",
  "pyopenssl>=22.0.0",
  "pyparsing>=3.1.2",
  "pyreadr>=0.5.2",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.2",
  "scipy>=1.8.0",
  "tqdm>=4.63.0",
  "typing_extensions>=4.0.0"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  "ipykernel>=6.13.0",
  "ipywidgets>=8.1.7",
  "myst-nb>=1.0.0",
  "nbconvert>=7.0.0",
  "pandoc>=2.0.1",
  "pybtex>=0.25.0",
  "pydata-sphinx-theme>=0.12",
  "setuptools>=61.0.0",
  "sphinx>=7.0,<9.0",
  "sphinx-copybutton>=0.5.0",
  "sphinx-favicon>=1.0.1",
  "sphinx_design>=0.3.0",
  "sphinx_mdinclude>=0.5.0",
  "sphinxcontrib.datatemplates>=0.9.2",
  "sphinxcontrib.bibtex>=2.4.2"
]
dev = [
  "codespell>=2.2",
  "tox>=4.12.0",
  "pybtex>=0.25.0",
  "pytest>=7.0.0",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=4.0.0",
  "setuptools>=61.0.0",
  "types-tqdm>=4.67.0",
  "pre-commit>=3.0.0",
  "ruff>=0.13.0",
  "ty>=0.0.13"
]

[project.urls]
Homepage = "https://github.com/pymovements/pymovements"
"Source Code" = "https://github.com/pymovements/pymovements"
Documentation = "https://pymovements.readthedocs.io/en/stable"
"Bug Tracker" = "https://github.com/pymovements/pymovements/issues"
Changelog = "https://github.com/pymovements/pymovements/releases"

[tool.codespell]
skip = "./src/pymovements/_version.py,./.git/*,./.pytest_cache/*,tests/files/*,*.bib"
count = true
quiet-level = 3

[tool.coverage.paths]
source = [
  '{toxworkdir}/src/pymovements',
  '*/.tox/*/lib/python*/site-packages/pymovements',
  '*/src/pymovements'
]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.coverage.run]
parallel = true
branch = true
omit = [
  'docs/*',
  'src/pymovements/_version.py',
  'tests/*'
]

[tool.doc8]
max-line-length = 100

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deprecated.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs.*"
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra -l --tb=long --doctest-modules --import-mode=importlib"
doctest_optionflags = "NORMALIZE_WHITESPACE"
filterwarnings = [
  "error",
  "ignore:pkg_resources is deprecated.*:UserWarning:pybtex",
  "ignore:pkg_resources is deprecated.*:DeprecationWarning:pybtex",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
  "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
  "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning",
  "ignore:datetime.datetime.utcfromtimestamp() is deprecated.*:DeprecationWarning"
]
markers = ["network: mark a test as requiring network access"]
testpaths = ['tests', 'src']

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".venv",
  ".git",
  ".tox",
  "build",
  "dist",
  "docs",
  "*egg",
  "*.ini",
  "src/pymovements/_version.py"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E4", # Import errors
  "E7", # Statement errors
  "E9", # Syntax errors
  "F", # pyflakes (flake8 core)
  "W", # pycodestyle warnings (flake8 core)
  # Import sorting
  "I", # isort
  # Python upgrades
  "UP", # pyupgrade
  # Docstring style
  "D", # pydocstyle
  # flake8-annotations
  "ANN", # flake8-annotations
  # flake8-bugbear
  "B", # flake8-bugbear
  # flake8-comprehensions
  "C4", # flake8-comprehensions
  # flake8-print
  "T20", # flake8-print
  # flake8-simplify
  "SIM" # flake8-simplify
]
# Preserve current ignore patterns from pydocstyle
ignore = [
  # pydocstyle ignores
  "D107", # Missing docstring in __init__
  "D203", # One blank line before class (conflicts with D211)
  "D213", # Multi-line summary second line (conflicts with D212)
  "D413", # Missing blank line after last section
  # Rules to enable in future:
  "B028", # no-explicit-stacklevel
  "ANN401", # any-type
  "B905", # zip-without-explicit-strict
  "T201", # print
  "SIM108", # if-else-block-instead-of-if-exp
  "ANN204", # missing-return-type-special-method
  "SIM102" # collapsible-if
]

[tool.ruff.lint.isort]
force-single-line = true # Each import on separate line
order-by-type = false
known-first-party = ["pymovements"] # Match --application-directories=src
force-sort-within-sections = true # Ensure consistent ordering

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D103", # Missing docstring in public function
  "ANN" # Tests don't need type annotations
]
"__init__.py" = ["F401", "F403"] # Allow unused imports in __init__.py
"tests/*_fixtures.py" = ["ALL"] # Skip all checks for test fixtures

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.package-data]
pymovements = ["datasets/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}+post{ccount}.{sha}"
dirty_template = "{tag}+post{ccount}.{sha}.dirty"

# Per-module overrides
[[tool.ty.overrides]]
include = ["tests/**"]
rules = {"unresolved-import" = "ignore", "invalid-assignment" = "ignore", "invalid-argument-type" = "ignore"}

[[tool.ty.overrides]]
include = ["docs/**"]
rules = {"unresolved-import" = "ignore", "invalid-assignment" = "ignore", "invalid-argument-type" = "ignore"}

[[tool.ty.overrides]]
include = ["scipy/**"]
rules = {"unresolved-import" = "ignore"}

[[tool.ty.overrides]]
include = ["deprecated/**"]
rules = {"unresolved-import" = "ignore"}

[[tool.ty.overrides]]
include = ["src/pymovements/**"]
rules = {unresolved-import = "ignore", unresolved-attribute = "ignore", invalid-method-override = "ignore", unused-type-ignore-comment = "ignore", invalid-argument-type = "ignore", call-non-callable = "ignore"}

[tool.ty.rules]

[tool.ty.src]
exclude = ["**/tests/**", "**/docs/**"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pymovements/_version.py"
versionfile_build = "src/pymovements/_version.py"
tag_prefix = "v"
parentdir_prefix = "pymovements-"
